Add useCase de autenticação
