# src/modules/account/dtos/ICreateUserDTO.ts
@@ -1,6 +1,5 @@
 class ICreateUserDTO {
   name: string;
-  username: string;
   password: string;
   email: string;
   driver_license: string;
